Tested remote commits

--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,13 @@
     background-size: cover;
 }
 
+/*testing remote commits*/
+body {
+    display: flex;
+    margin: 0;
+    height: 100%;
+}
+
 /*
 html {
     box-sizing: border-box;
