Edited navbar: changed heading, menu items, color, Search button color.

--- a/css/app.css
+++ b/css/app.css
@@ -20,6 +20,16 @@
   font-weight: 300;
 }
 
+.btn-outline-success {
+  color: #ffa5ce;
+  border-color: #ffa5ce;
+}
+
+.btn-outline-success:hover {
+  color: #fff;
+  background-color: #ffa5ce;
+  border-color: #ffa5ce;
+}
 
 /*testing remote commits*/
 
