--- a/css/app.css
+++ b/css/app.css
@@ -31,6 +31,97 @@
   border-color: #ffa5ce;
 }
 
+
+.card-centering {
+  width: 70%;
+  margin: auto;
+}
+
+.card {
+  position: relative;
+  display: block;
+  width: 50%;
+  margin: auto;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid #ffa5ce;
+  border-radius: 0.25rem;
+  background-color: #fff6fa;
+
+}
+
+/*
+.card-deck {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+*/
+
+.card-body {
+  display: inline-block;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1.25rem;
+}
+
+.card-header {
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: #ffa5ce;
+  border-bottom: 1px solid #ffa5ce;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li div {
+ display: table-cell; vertical-align: middle;
+}
+
+/*
+input {
+    width: 20px;
+
+    position: relative;
+    left: 200px;
+
+    vertical-align: middle;
+}
+
+li {
+    width: 200px;
+
+    position: relative;
+    left: -20px;
+
+    display: inline-block;
+    vertical-align: middle;
+}
+
+
 /*testing remote commits*/
 
 
