--- a/css/app.css
+++ b/css/app.css
@@ -10,6 +10,10 @@
 
 }
 
+.featurette-divider {
+  margin: 3.5rem 0; /* Space out the Bootstrap <hr> more */
+}
+
 .featurette-heading {
     font-size: 30px;
 }
@@ -23,16 +27,40 @@
   font-weight: 300;
 }
 
-.btn-outline-success {
+.btn-outline-pink {
   color: #ffa5ce;
   border-color: #ffa5ce;
 }
 
-.btn-outline-success:hover {
+.btn-outline-pink:hover {
   color: #fff;
   background-color: #ffa5ce;
   border-color: #ffa5ce;
 }
+
+.btn-outline-pink:focus, .btn-outline-success.focus {
+  box-shadow: 0 0 0 0.2rem #ffa5ce;
+}
+
+.btn-outline-pink.disabled, .btn-outline-success:disabled {
+  color: #ffa5ce;
+  background-color: transparent;
+}
+
+.btn-outline-pink:not(:disabled):not(.disabled):active, .btn-outline-pink:not(:disabled):not(.disabled).active,
+.show > .btn-outline-pink.dropdown-toggle {
+  color: #fff;
+  background-color: #ffa5ce;
+  border-color: #ffa5ce;
+}
+
+.btn-outline-pink:not(:disabled):not(.disabled):active:focus, .btn-outline-pink:not(:disabled):not(.disabled).active:focus,
+.show > .btn-outline-pink.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem #ffa5ce;
+}
+
+
+
 
 
 .card-centering {
@@ -93,24 +121,7 @@
   border-bottom: 1px solid #89cff0;
 }
 
-.btn {
-  display: inline-block;
-  font-weight: 400;
-  color: #212529;
-  text-align: center;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-color: transparent;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+
 
 ul {
   list-style-type: none;
@@ -118,6 +129,10 @@ ul {
 
 li div {
  display: table-cell; vertical-align: middle;
+}
+
+.on-one-line {
+    display: inline-block;
 }
 
 /*
