--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,7 +53,7 @@ extra_css: "carousel.css"
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img style="object-fit: cover; overflow: hidden;"src="../static/img/carousel-1.jpg" alt="Baby Evelynn">
+          <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-1.jpg" alt="Baby Evelynn">
           
           <div class="container">
             <div class="carousel-caption text-left">
@@ -64,7 +64,7 @@ extra_css: "carousel.css"
           </div>
         </div>
         <div class="carousel-item">
-          <img style="object-fit: cover; overflow: hidden;"src="../static/img/carousel-2.jpg" alt="Baby Evelynn">
+          <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-2.jpg" alt="Baby Evelynn">
           
           <div class="container">
             <div class="carousel-caption">
@@ -75,7 +75,7 @@ extra_css: "carousel.css"
           </div>
         </div>
         <div class="carousel-item">
-          <img style="object-fit: cover; overflow: hidden;"src="../static/img/carousel-3.jpg" alt="Baby Evelynn">
+          <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-3.jpg" alt="Baby Evelynn">
           
           <div class="container">
             <div class="carousel-caption text-right">
