--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,7 +54,7 @@ extra_css: "carousel.css"
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-1.jpg" alt="Baby Evelynn">
-          
+
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>Getting ready for a baby?</h1>
@@ -65,7 +65,7 @@ extra_css: "carousel.css"
         </div>
         <div class="carousel-item">
           <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-2.jpg" alt="Baby Evelynn">
-          
+
           <div class="container">
             <div class="carousel-caption">
               <h1>Do I need it all?</h1>
@@ -76,7 +76,7 @@ extra_css: "carousel.css"
         </div>
         <div class="carousel-item">
           <img style="object-fit: cover; overflow: hidden;"src="../static/img/Carousel-3.jpg" alt="Baby Evelynn">
-          
+
           <div class="container">
             <div class="carousel-caption text-right">
               <h1>Quality or price?</h1>
@@ -109,7 +109,7 @@ extra_css: "carousel.css"
       <div class="card-deck mb-3 babylist">
         <div class="card card-pink mb-4 shadow-sm">
           <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-normal card-heading" style="color:#ffffff">Travel time</h4>
+            <h4 class="my-0 font-weight-normal card-heading" style="color:#ffffff">❀ Travel time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -119,13 +119,16 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Blanket</div></li>
               <li><div><input type="checkbox"> <i>Optional: car shades, mirror</i></div></li>
             </ul>
+          <div class="col-md-5">
+            <img class="baby-icon" src="../static/img/icons/1.jpg" alt="Chicco Bravo Trio Travel System">
+          </div>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
 
         <div class="card card-blue mb-4 shadow-sm">
           <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Baby fashion</h4>
+            <h4 class="my-0 font-weight-normal" style="color:#ffffff">❀ Baby fashion</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -141,7 +144,7 @@ extra_css: "carousel.css"
 
         <div class="card card-pink mb-4 shadow-sm">
           <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Bath time</h4>
+            <h4 class="my-0 font-weight-normal" style="color:#ffffff">❀ Bath time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -162,7 +165,7 @@ extra_css: "carousel.css"
       <div class="card-deck mb-3">
         <div class="card card-blue mb-4 shadow-sm">
           <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Nap time</h4>
+            <h4 class="my-0 font-weight-normal" style="color:#ffffff">❀ Nap time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -182,7 +185,7 @@ extra_css: "carousel.css"
 
         <div class="card card-pink mb-4 shadow-sm">
           <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Lunch time</h4>
+            <h4 class="my-0 font-weight-normal" style="color:#ffffff">❀ Lunch time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -202,7 +205,7 @@ extra_css: "carousel.css"
 
         <div class="card card-blue mb-4 shadow-sm">
           <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Refresh time</h4>
+            <h4 class="my-0 font-weight-normal" style="color:#ffffff">❀ Refresh time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -242,8 +245,8 @@ extra_css: "carousel.css"
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Chicco-Bravo-Travel-System-Lilla/dp/B00MS9VTH4', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-md-5">
-          <img class="baby-item"src="../static/img/ChiccoBravo.jpg" alt="Chicco Bravo Trio Travel System">
-          
+          <img class="img-fluid" src="../static/img/ChiccoBravo.jpg" alt="Chicco Bravo Trio Travel System">
+
         </div>
       </div>
 
@@ -258,7 +261,7 @@ extra_css: "carousel.css"
         </div>
         <div class="col-md-5 order-md-1">
           <img src="../static/img/UppaBabyVistaBundle.jpg" class="img-fluid" alt="Responsive image">
-          
+
         </div>
       </div>
 
@@ -274,7 +277,7 @@ extra_css: "carousel.css"
         </div>
         <div class="col-md-5">
           <img class="baby-item"src="../static/img/Canton4in1ConvertibleCrib.jpg" alt="Canton 4 in 1 Convertible Crib">
-          
+
         </div>
       </div>
 
@@ -289,7 +292,7 @@ extra_css: "carousel.css"
         </div>
         <div class="col-md-5 order-md-1">
           <img src="../static/img/SwaddleMeBassinet.jpg" class="img-fluid" alt="SwaddleMe By Your Side Sleeper">
-          
+
         </div>
       </div>
 
