Added icons to all cards.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -106,10 +106,10 @@ extra_css: "carousel.css"
     -->
 
     <div class="container">
-      <div class="card-deck mb-3 babylist">
+      <div class="card-deck mb-2 babylist">
         <div class="card card-pink mb-4 shadow-sm">
           <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-normal card-heading" style="color:#ffffff">❀ Travel time</h4>
+            <h4 class="my-0 font-weight-normal card-heading" style="color:#ffffff">Travel time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -119,16 +119,16 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Blanket</div></li>
               <li><div><input type="checkbox"> <i>Optional: car shades, mirror</i></div></li>
             </ul>
-          <div class="col-md-5">
-            <img class="baby-icon" src="../static/img/icons/1.jpg" alt="Chicco Bravo Trio Travel System">
-          </div>
+          
+            <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/travel-time-icon.png" alt="Stroller Icon">
+          
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
 
         <div class="card card-blue mb-4 shadow-sm">
           <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">❀ Baby fashion</h4>
+            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Baby fashion</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -138,13 +138,14 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Jumpsuits - size 1 month - x3</div></li>
               <li><div><input type="checkbox"> <i>Optional: jacket, hat, soft shoes</i></div></li>
              </ul>
+             <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/fashion-time-icon.png" alt="Onesie Icon">
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
 
         <div class="card card-pink mb-4 shadow-sm">
           <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">❀ Bath time</h4>
+            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Bath time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -154,6 +155,7 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Baby wash clothes</div></li>
               <li><div><input type="checkbox"> Rinser</div></li>
             </ul>
+            <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/bath-time-icon.png" alt="Rubber Duck Icon">
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
@@ -165,7 +167,7 @@ extra_css: "carousel.css"
       <div class="card-deck mb-3">
         <div class="card card-blue mb-4 shadow-sm">
           <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">❀ Nap time</h4>
+            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Nap time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -179,13 +181,14 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Bouncer or swing</div></li>
               <li><div><input type="checkbox"><span> </span><a href="#bassinet"> <i>Optional: bassinet</i></a></div></li>
             </ul>
+            <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/bed-time-icon.png" alt="Crib Icon">
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
 
         <div class="card card-pink mb-4 shadow-sm">
           <div class="card-header card-header-pink text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">❀ Lunch time</h4>
+            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Lunch time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -199,13 +202,14 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Burp clothes/receiving blankets</div></li>
               <li><div><input type="checkbox"> Nipple cream</div></li>
             </ul>
+            <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/lunch-time-icon.png" alt="Bottle Icon">
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
 
         <div class="card card-blue mb-4 shadow-sm">
           <div class="card-header card-header-blue text-center">
-            <h4 class="my-0 font-weight-normal" style="color:#ffffff">❀ Refresh time</h4>
+            <h4 class="my-0 font-weight-normal" style="color:#ffffff">Refresh time</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
@@ -219,6 +223,7 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Diaper rush ointment</div></li>
               <li><div><input type="checkbox"> Diaper pail</div></li>
             </ul>
+            <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/refresh-time-icon.png" alt="Diaper Icon">
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
