Added an items counter on top of the cards.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,7 @@ extra_css: "carousel.css"
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/carousel.css">
     <link rel="stylesheet" href="../static/css/app.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -105,6 +106,11 @@ extra_css: "carousel.css"
     </div>
     -->
 
+    <div class="pricing-header px-3 py-3 pt-md-1 pb-md-3 mx-auto text-center">
+      <h1 id="wow" class="featurette-heading">Items To Get: <span id="itemNumber">0</span> / 42</h1>
+      <!--<p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>-->
+    </div>
+
     <div class="container">
       <div class="card-deck mb-2 babylist">
         <div class="card card-pink mb-4 shadow-sm">
@@ -113,7 +119,7 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car seat</a></div></li>
+              <li><div><input type="checkbox" id="baby-checkbox"><span> </span><a href="#travel-system">Car seat</a></div></li>
               <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car seat carrier/stroller</a></div></li>
               <li><div><input type="checkbox"> Diaper backpack</div></li>
               <li><div><input type="checkbox"> Blanket</div></li>
@@ -315,6 +321,7 @@ extra_css: "carousel.css"
     </footer>
 
   </main>
+   <script src="../static/js/app.js"></script>
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
