--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -107,7 +107,7 @@ extra_css: "carousel.css"
     -->
 
     <div class="pricing-header px-3 py-3 pt-md-1 pb-md-3 mx-auto text-center">
-      <h1 id="wow" class="featurette-heading">Items To Get: <span id="itemNumber">0</span> / 42</h1>
+      <h1 id="wow" class="featurette-heading"><span id="itemMessage">Items To Get: </span><span id="itemNumber">0</span> / 42</h1>
       <!--<p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>-->
     </div>
 
