Added featurettes for Diaper Backpack and Blanket.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -119,15 +119,15 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox" id="baby-checkbox"><span> </span><a href="#travel-system">Car seat</a></div></li>
+              <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car seat</a></div></li>
               <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car seat carrier/stroller</a></div></li>
-              <li><div><input type="checkbox"> Diaper backpack</div></li>
-              <li><div><input type="checkbox"> Blanket</div></li>
+              <li><div><input type="checkbox"><span> </span><a href="#diaper-backpack">Diaper backpack</a></div></li>
+              <li><div><input type="checkbox"><span> </span><a href="#blanket">Blanket</a></div></li>
               <li><div><input type="checkbox"> <i>Optional: car shades, mirror</i></div></li>
             </ul>
-          
+
             <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/travel-time-icon.png" alt="Stroller Icon">
-          
+
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
         </div>
@@ -278,6 +278,36 @@ extra_css: "carousel.css"
 
       <hr class="featurette-divider">
 
+            <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="diaper-backpack"></span>Diaper Backpack</h2>
+          <p class="lead">Now one might argue that any backpack or roomy bag will work just fine for purposes of carrying diapers and bottles, but hey, I didn’t have a spare one. A diaper backpack will also come with a changing pad and insulated bottle pockets – nice! Not to mention tons of pockets to keep you organized. And there are all kinds of designs for you to choose from. My husband and I decided on a neutral gray one so we both feel good about wearing it.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">HapTim Multi-Function Large Baby Diaper Bag:</span> $46.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B01MCWVQN1', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-md-5">
+          <img src="../static/img/HapTimBackpack.jpg" class="img-fluid" alt="HapTim Diaper Backpack">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="blanket"></span>Blanket: <span class="text-muted">keep her warm!</span></h2>
+          <p class="lead">Regardless of what time of the year we’re talking about, it’s a good idea to have a medium warmth blanket handy, even during summer. Because, you know, air conditioners. A blanket is an easy way to add an extra layer to your baby’s outfit, and it’s actually the only safe way to keep your baby warm in a car in colder months. Safety guidelines forbid parents from bundling up little ones in winter coats and parkas when putting them in a car seat, because the straps won’t tighten well enough. You dress the baby into a fleece suit, strap her into the seat and then tuck a blanket on top of it. My family ended up getting a blanket for every car, stroller and place where baby has to spend time at. We had at least five, if not more!</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Hudson Baby Super Plush Blanket:</span> $11.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/gp/product/B01BGG3I0U', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-md-5 order-md-1">
+          <img src="../static/img/HudsonBlanket.jpg" class="img-fluid" alt="Hudson Baby Super Plush Blanket">
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="crib"></span>Crib</h2>
@@ -287,7 +317,7 @@ extra_css: "carousel.css"
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Delta-Children-Canton-Convertible-Bianca/dp/B06XPBNRH7', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-md-5">
-          <img class="baby-item"src="../static/img/Canton4in1ConvertibleCrib.jpg" alt="Canton 4 in 1 Convertible Crib">
+          <img src="../static/img/Canton4in1ConvertibleCrib.jpg" class="img-fluid" alt="Canton 4 in 1 Convertible Crib">
 
         </div>
       </div>
